horizontal scrollbar fixed

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
+  /* width: 100vw; */
   height: 100vh;
 }
 .shadow-sm {
